FIX | z-index of Modal component

--- a/components/commons/Modal/style.module.scss
+++ b/components/commons/Modal/style.module.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   visibility: hidden;
+  z-index: 10;
 
   &.open {
     visibility: visible;
